# ramalama-stack

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  pypi.yml  test-container.yml  test-external-providers.yml  test-lls-integration.yml
src/ramalama_stack/: openai_compat.py  provider.py  ramalama-run.yaml
src/ramalama_stack/providers.d/remote/inference/: ramalama.yaml
tests/: test-external-providers.sh
